# AarchGate-Postgres-Plugin

./: .gitignore  .gitmodules  CLAUDE.md  CLION_SETUP.md  CMakeLists.txt  Makefile  README.md  aarchgate.control  docker-compose.yml
.docker/: pg_build.Dockerfile
scripts/: dev-setup.sh  test_pg_acceleration.sh
sql/: aarchgate--1.0.sql
src/: aarchgate_pg.cpp
